--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "ember-tinycon",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Ember service for tinycon, a small library for manipulating the favicon.",
   "keywords": [
     "ember-addon"
   ],
   "license": "MIT",
-  "author": "",
+  "author": "Thomas McNiven",
   "directories": {
     "doc": "doc",
     "test": "tests"
   },
-  "repository": "",
+  "repository": "https://github.com/vevix/ember-tinycon",
   "scripts": {
     "build": "ember build",
     "start": "ember server",
     "test": "ember try:each"
   },
   "dependencies": {
-    "ember-cli-babel": "^5.1.7"
+    "ember-cli-babel": "^5.1.7",
+    "ember-cli-node-assets": "^0.1.6",
+    "tinycon": "tommoor/tinycon#83e7ef5"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.4.5",
@@ -29,7 +31,7 @@
     "ember-cli-htmlbars": "^1.1.1",
     "ember-cli-htmlbars-inline-precompile": "^0.3.6",
     "ember-cli-inject-live-reload": "^1.4.1",
-    "ember-cli-jshint": "^2.0.1",
+    "ember-cli-eslint": "3.0.2",
     "ember-cli-qunit": "^3.0.1",
     "ember-cli-release": "^0.2.9",
     "ember-cli-shims": "^1.0.2",
@@ -42,7 +44,6 @@
     "ember-load-initializers": "^0.6.0",
     "ember-resolver": "^2.0.3",
     "ember-source": "~2.11.0",
-    "ember-welcome-page": "^2.0.2",
     "loader.js": "^4.0.10"
   },
   "engines": {
